# my-ai-agent

./: Cargo.toml  README.md
agent-core/: Cargo.toml
agent-core/src/: lib.rs  tool_definition.rs
agent-core/src/function_type_descriptions/: mod.rs  vec_of.rs
agent-core/src/json_schema/: json_schema_description.rs  json_type_description.rs  mod.rs  opt_of.rs  opt_of_vec.rs  tp.rs  vec_of.rs
agent-core/src/my_auto_gen/: auto_gen_settings.rs  exec_tool_call.rs  mod.rs  my_auto_gen.rs  my_auto_gen_inner.rs  open_ai_resp_model.rs  tool_function.rs  tool_functions.rs
agent-core/src/my_auto_gen/argentic_response/: execute_fl_url_request.rs
agent-core/src/my_auto_gen/deserializer/: deserialize.rs  impl_from_str.rs  mod.rs
agent-core/src/open_ai_chat_request/: chunk_response.rs  mod.rs  models.rs  open_ai_chat_request.rs  open_ai_chat_streamed_response.rs
agent-core/src/request_builder/: llm_request_builder.rs  llm_request_builder_inner.rs  mod.rs  request_builder.rs  request_builder_inner.rs
ai-macros/: Cargo.toml
ai-macros/src/: lib.rs
ai-macros/src/apply_json_schema/: generate.rs  generate_deserialize_trait.rs  generate_property.rs  mod.rs
ai-macros/src/tools_model_description/: generate.rs
ai-models/: Cargo.toml
ai-models/src/: lib.rs  llm_model.rs  request_model.rs  roles.rs  zai_settings.rs
my-ai-agent/: Cargo.toml
my-ai-agent/src/: lib.rs
tests/: Cargo.toml
tests/src/: lib.rs  model_with_no_required.rs  test_array.rs  test_deserializing_array_as_single_value.rs  test_deserializing_array_as_single_value_opt.rs  test_opt_enum.rs  tests.rs
(+3 files in other folders)
