[package]
name = "my-ai-agent"
version = "0.1.0"
edition = "2024"

[features]
default = []
agent = ["agent-core", "my-json"]


[dependencies]
ai-macros = { path = "../ai-macros" }
agent-core = { path = "../agent-core", optional = true }
ai-models = { path = "../ai-models" }

my-json = { tag = "0.3.2", git = "https://github.com/MyJetTools/my-json.git", optional = true }
